
6.01   October 15, 2016

       Fixed some bugs in screen format conversions

       Added "vsync" method for systems with supported drivers that allow for
       waiting on vertical blank.  Note, Raspberry PIs do not support this,
       although calling it should not be an issue, as Raspberry PI's driver
       just make this a dummy call.

       Improved documentation on constants and fixed some examples to use
       constants instead of the onject variables.

       Added documentation for some screen format conversion methods.

       Changed the splash screen to better demonstrate most capabilities. 

6.02   October 25, 2016

       Added the ability to include the alpha channel in gradients.  This
       means you can generate varying degrees of alpha as well as color.

       Splash screen modified somewhat to reflect the above.

       Lowered the Inline pre-requisite version requirement to 0.53.

       Caught a few bugs relating to gradients in circle and rounded boxes.

6.03   December 21, 2016

       Added runtime diagnostics to more easily diagnose failures.

       It outputs all errors to STDERR.

       Runtime diagnostics ALWAYS are shown if there are catastrophic
       failures.

6.04   March 10, 2018

       Cleaned up some documentation

       Removed code to check for current active console.  That's up to you
       now.

       Modified some of the examples scripts to work with switches.

6.05   March 30, 2018

       Fixed crashes for Intel GPUs (and perhaps others)
       
       Updated documentation to help with troubleshooting.

6.06   March 31, 2018

       Moved C routines out of the Perl code and into its own file

       Further improved compatibility with all framebuffer GPUs.  The  "fbset"
       utility should no longer be needed as a backup.  Now C makes this call
       instead of Perl.  However, for those not able to compile the C routines,
       the older Perl logic is still there for compatibility.